@@ -1,4 +1,8 @@
 2015/10/05:
+Fixed a bug where inconsistent OCaml code was generated when --table
+and --external-tokens were used together. (Reported by Darin Morrison.)
+
+2015/10/05:
 In --infer mode, leave the .ml file around (instead of removing it) if
 ocamlc fails, so we have a chance to understand what's wrong.
 
